# week-40-better-uptime

apps/web/: README.md  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(static)/features/: page.tsx
apps/web/app/(static)/pricing/: page.tsx
apps/web/components/: icons.tsx
apps/web/components/home/: company-logos.tsx  cta-section.tsx  faq-section.tsx  feature-card.tsx  hero-section.tsx  live-demo-section.tsx  pricing-section.tsx  testimonial-section.tsx
apps/web/components/layout/: footer.tsx  header.tsx
apps/web/lib/: animations.css
rust-backend/: .env.example  README.md  cargo.toml
rust-backend/api/: Cargo.toml
rust-backend/api/src/: main.rs
rust-backend/api/src/routes/: websites.rs
rust-backend/db/src/: config.rs  lib.rs  website.rs
rust-backend/process_queue/: Cargo.toml
rust-backend/process_queue/src/: lib.rs
rust-backend/worker/: Cargo.toml
rust-backend/worker/src/: lib.rs
