[package]
name = "process_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "0.25.4"
log = "0.4"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }